--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
-      "start": "node start.js"
+      "dev": "node start.js",
+      "start": "node start.js prod"
     }
   }
   
