--- a/package.json
+++ b/package.json
@@ -1,62 +1,58 @@
 {
-  "name": "Epic Escape Tours",
-  "description": "Epic Escape Tours - Travel Agency Landing Page with Next.js, Next-Auth, TypeScript and MongoDB support for crud and database operations.",
-  "author": "jaysingh9518@gmail.com",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jaysingh9518/epic-escape-tours"
-  },
+  "name": "epic-escape-tours",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
+  "description": "Epic Escape Tours",
+  "keywords": [
+    "epic escape tours",
+    "travel",
+    "luxury",
+    "experience"
+  ],
+  "author": "jaysingh9518@gmail.com",
+  "repository": "https://github.com/jaysingh9518/epic-escape-tours",
+  "bugs": "https://github.com/jaysingh9518/epic-escape-tours/issues",
+  "homepage": "https://www.epicescapetours.com",
+  "eslintConfig": {
+    "extends": "next/core-web-vitals"
+  },
+  "browserslist": [
+    ">0.10%",
+    "not IE 11",
+    "not dead"
+  ],
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "postbuild": "next-sitemap"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@fontsource/jost": "^5.2.5",
-    "@mui/icons-material": "^6.4.7",
-    "@mui/material": "^6.4.7",
-    "@mui/system": "^6.4.7",
-    "@react-pdf/renderer": "^4.3.0",
-    "axios": "^1.8.3",
-    "cloudinary-core": "^2.13.1",
-    "framer-motion": "^12.5.0",
-    "next": "^15.2.2",
+    "@hookform/resolvers": "^4.1.3",
+    "bcryptjs": "^3.0.2",
+    "mongoose": "^8.12.1",
+    "next": "15.2.2",
+    "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
-    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-multi-carousel": "^2.8.5",
-    "react-timeago": "^8.0.0",
-    "recharts": "^2.15.1",
-    "styled-components": "6.1.15"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.2",
+    "react-icons": "5.5.0",
+    "cloudinary-core": "^2.13.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.0",
-    "@tailwindcss/postcss": "^4.0.14",
-    "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "tailwindcss": "^4.0.14",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.2",
+    "tailwindcss": "^4",
     "typescript": "^5.8.2"
   }
 }
