--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
-  "description": "Epic Escape Tours",
+  "description": "Epic Escape Tours - Luxury travel experiences tailored for you.",
   "keywords": [
     "epic escape tours",
     "travel",
     "luxury",
-    "experience"
+    "experience",
+    "adventure",
+    "holiday"
   ],
-  "author": "jaysingh9518@gmail.com",
-  "repository": "https://github.com/jaysingh9518/epic-escape-tours",
-  "bugs": "https://github.com/jaysingh9518/epic-escape-tours/issues",
+  "author": "Jay Prakash <jaysingh9518@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jaysingh9518/epic-escape-tours.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jaysingh9518/epic-escape-tours/issues"
+  },
   "homepage": "https://www.epicescapetours.com",
   "eslintConfig": {
     "extends": "next/core-web-vitals"
@@ -30,23 +37,23 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.5",
     "@hookform/resolvers": "^4.1.3",
-    "bcryptjs": "^3.0.2",
+    "cloudinary-core": "^2.13.1",
     "mongoose": "^8.12.1",
     "next": "15.2.2",
-    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
+    "@iconify/react": "^5.2.0",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "zod": "^3.24.2",
     "react-icons": "5.5.0",
-    "cloudinary-core": "^2.13.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
